--- a/Ejercicio Clase8/Ejercicio Clase8.cbp
+++ b/Ejercicio Clase8/Ejercicio Clase8.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="legajo.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="legajo.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
