--- a/ParcialLab1/ParcialLab1.cbp
+++ b/ParcialLab1/ParcialLab1.cbp
@@ -34,6 +34,14 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="negocios.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="negocios.h" />
+		<Unit filename="utn.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="utn.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
